@startuml
'https://plantuml.com/class-diagram

abstract class Pizza {
prepare():void
bake():void
cut():void
box():void
}

class BJCheesePizza {
}

class BJPepperPizza {
}

class LDCheesePizza {
}
class LDPepperPizza {
}

abstract class OrderPizza {
    {abstract} createPizza():void
}

class BJOrderPizza {
   createPizza():void
}

class LDOrderPizza {
    createBJPizza():void
}

BJCheesePizza --|> Pizza
LDCheesePizza --|> Pizza
BJPepperPizza --|> Pizza
LDPepperPizza --|> Pizza

'LDOrderPizza --|> OrderPizza
'BJOrderPizza --|> OrderPizza
OrderPizza <|-- LDOrderPizza
OrderPizza <|-- BJOrderPizza
BJOrderPizza --> BJPepperPizza
BJOrderPizza --> BJCheesePizza

LDOrderPizza --> LDPepperPizza
LDOrderPizza --> LDCheesePizza
@enduml